# src/main/java/gift/academic/promo_it/doc/swagger.yaml
@@ -187,6 +187,12 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/ProblemDetail'
+        '422':
+          description: Код некуда отправить (емейл неверен и т.п.).
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
   /otp/validate:
     post:
       tags:
@@ -278,7 +284,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetail'
         '409':
-          description: Конфликт (Admin уже существует)
+          description: Конфликт (роль Admin уже занята или логин уже существует)
           content:
             application/problem+json:
               schema:
